fix ai-service